fixed about section mobile overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,6 +63,7 @@ a {
 }
 ul {
   list-style: none;
+  padding: 0;
 }
 li {
   margin-top: 0.5rem;
@@ -117,14 +118,16 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 0;
   height: 100vh;
 }
 .tech-icons {
-  width: 60%;
+  min-width: 300px;
+  width: 40%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
 }
 .arrowbuttons {
   display: flex;
@@ -145,8 +148,9 @@ li {
 .about,
 .tech,
 .projects {
+  height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   text-align: center;
   flex-direction: column;
@@ -154,7 +158,6 @@ li {
 .about-copy,
 .tech-copy,
 .projects-copy {
-  margin-top: 4rem;
   width: 80vw;
   max-width: 800px;
 }
@@ -179,6 +182,12 @@ li:focus {
 @media only screen and (min-width: 600px) {
   .navigation {
     flex-direction: row;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .about {
+    justify-content: flex-start;
+    margin-top: 4rem;
   }
 }
 // Particle background ///////////////////////////////////////////////////
